--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.18)
+cmake_minimum_required(VERSION 3.19)
 
 project(SimplePlayer VERSION 1.0 LANGUAGES CXX)
 
@@ -6,23 +6,11 @@ set(CMAKE_AUTOMOC ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(Qt6 6.2 COMPONENTS Quick Gui REQUIRED)
+find_package(Qt6 6.2 COMPONENTS Core Gui Qml Quick REQUIRED)
 
-qt_add_executable(splayer
-  SimplePlayer/SimplePlayer.cpp
-)
+# 3rdparty projects
+add_subdirectory(3rdparty/libonvif)
 
-qt_add_qml_module(splayer
-  URI SimplePlayer
-  VERSION 1.0
-  QML_FILES
-    SimplePlayer/SimplePlayer.qml
-  SOURCES
-    SimplePlayer/SimplePlayer.cpp
-)
-
-target_link_libraries(splayer
-  PRIVATE
-    Qt6::Gui
-    Qt6::Quick
-)
+# local project
+add_subdirectory(src/OnvifProxy)
+add_subdirectory(src/SimplePlayer)
