--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "3rdparty/libonvif"]
 	path = 3rdparty/libonvif
-	url = https://github.com/sr99622/libonvif
+	url = https://github.com/VladislavNikolin/libonvif
