almost there (tm)

--- a/src/OnvifProxy/CMakeLists.txt
+++ b/src/OnvifProxy/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_library(OnvifProxy
   OnvifCamera.cpp
   OnvifCameraModel.cpp
+  OnvifAuthorizedCameraFilterModel.cpp
 )
 
 target_link_libraries(OnvifProxy
